force-app/main/default/objects/FieloPLT__RuleTrigger__c/FieloPLT__RuleTrigger__c.object-meta.xml
<CustomObject>
    <description>Action Trigger underlays Actions and evaluate the conditions that the chosen object needs to fulfill so as to define when an Action Trigger must process a record.</description>
    <label>Action Trigger</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>