force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__ConditionField__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConditionField__c</fullName>
    <description>It allows to choose the entry condition which depends on the Object previously chosen.</description>
    <inlineHelpText>Choose the entry condition to process the Object.</inlineHelpText>
    <label>Condition Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FieloPLT__Type__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>