force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__ConditionType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConditionType__c</fullName>
    <label>Condition Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>