force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ConditionValue__c</fullName>
    <description>It enables to choose a value which depends on the *Condition Field* defined before.</description>
    <inlineHelpText>Choose a value for the *Condition Field* defined before. Condition Value varies depending on the &quot;Condition Field&quot;.</inlineHelpText>
    <label>Condition Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>