force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__Date__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Date__c</fullName>
    <defaultValue>&apos;CreatedDate&apos;</defaultValue>
    <description>It enables to choose any Date field linked to the above chosen Object</description>
    <inlineHelpText>Choose any Date field linked to above chosen Object</inlineHelpText>
    <label>Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>