force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>It shows Engine Trigger detailed description.</description>
    <inlineHelpText>Enter the Engine Trigger detailed description.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>