force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__Library__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Library</label>
    <referenceTo>FieloPLT__Library__c</referenceTo>
    <relationshipName>Rule_Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>