force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__LookupFromEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LookupFromEmailAlert__c</fullName>
    <description>Transaction field name related to the triggered object.</description>
    <inlineHelpText>Choose the transaction field name related to the triggered object.</inlineHelpText>
    <label>Lookup from Email Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>