force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__LookupfromTracker__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LookupfromTracker__c</fullName>
    <description>Tracker field name related to the triggered object.</description>
    <inlineHelpText>Choose the Tracker field name related to the triggered object.</inlineHelpText>
    <label>Lookup from Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>