force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__LookupFromTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LookupFromTransaction__c</fullName>
    <description>Transaction field name related to the triggered object.</description>
    <inlineHelpText>Choose the Transaction field name related to the triggered object.</inlineHelpText>
    <label>Lookup from Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>