force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__Object__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Object__c</fullName>
    <description>Object of the Action. By default, the available Objects to select are the ones which include a lookup to Members, that is, any Object related to Members: Badge Member, Challenge Member, Event, Level Member, Member Segment, Member, Point, Redemption, Tracker and Transaction.</description>
    <inlineHelpText>Choose the Object of the Action. By default, all Fielo objects related to Members are included.</inlineHelpText>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FieloPLT__Event__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>