force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__Prefix__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Prefix__c</fullName>
    <description>Object ID prefix.</description>
    <inlineHelpText>Object ID prefix.</inlineHelpText>
    <label>Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>