force-app/main/default/objects/FieloPLT__RuleTrigger__c/fields/FieloPLT__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UniqueKey__c</fullName>
    <formula>TEXT(FieloPLT__Object__c) + TEXT(FieloPLT__ConditionField__c) + TEXT(FieloPLT__ConditionValue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>