force-app/main/default/objects/FieloPLT__RuleTrigger__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>