force-app/main/default/objects/FieloPLT__RuleTrigger__c/listViews/VN_NovoProjeto.listView-meta.xml
<ListView>
    <fullName>VN_NovoProjeto</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloPLT__Description__c</field>
        <operation>contains</operation>
        <value>novo</value>
    </filters>
    <label>Novo Projeto</label>
    <language>pt_BR</language>
</ListView>